

********************************************************************
						V1.2.4
********************************************************************


#### SIGNUP MODULE
********************************************************************
the design is broken probably due to smarty template


#### REPORT IMPROVE PRESENTATION
********************************************************************
commit :
http://trac.a2billing.net/cgi-bin/trac.cgi/changeset/895
this patch make a couples of fixes & changes on the CDR Report (such as text size, position, names, colors...)

We need to make those same changes over the other report page :
# Invoices
# Calls Compare
# Monthly Traffic
# Daily Load
# Report

and also on the customer interface.

#### MISC
********************************************************************
- Selection of the month -> replace by -> Month select ...
- 1.Call Report – CDR Report – for appearances sake, can you make the font and size 
the same for Show: Answered Calls etc in the options section. As per the rest of this form ? 
- see more bug from Joe's report 

#### CHECK DESIGN ERROR WITH IE (INTERNET EXPLORER)
********************************************************************
- licence at the bottom is broken
- anything else we find, etc...


#### IE ISSUES
********************************************************************
A user can face following issues in the client side Website.

1) Login Page: Click Here Text is very Small.
2) Main Problem at the Pages is Menu. Left Side Menu is Half Displayed. and + Expand functionality is not working for DID.
3) Userinfo.php: Text Font is very bad. Huge font are displayed. 2) Page layout is disturbed.
4) Layout is disturbed on all pages
5) Layout of the Footer is not ok.
6) Change password page layout: Page has much white space under the header.
7) Add Caller ID Page is containing different text fonts.



######## ACTIVATED TO CHECK ON CID ROUTING