@@ -577,8 +577,8 @@ ivr_voucher = NO
 ivr_voucher_prefix = 8
 
 ; When the user credit are below the minimum credit to call min_credit
-;  jump directly to the voucher IVR menu  (values: YES - NO)
-jump_voucher_if_min_credit = YES
+; jump directly to the voucher IVR menu  (values: YES - NO)
+jump_voucher_if_min_credit = NO
 
 ; Extracharge DIDs, multiple numbers and fees must be separated by comma
 ;extracharge_did = 1800XXXXXXX,1888XXXXXXX
